home.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-dep
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dev
  strategy:
    type: Recreate
  template:
    metadata:
      name: home-dep
      labels:
        app: dev
    spec:
      containers:
        - name: home
          image: caesar269/nginx:home
          ports:
            - containerPort: 80
              name: home-port
---
apiVersion: v1
kind: Service
metadata: 
  name: home-svc
spec:
  selector:
     app: dev
  ports:
    - name: home-port
      targetPort: 80
      port: 80
