ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gke
  annotations:
spec: 
  ingressClassName: azure-application-gateway
  defaultBackend:
    service:
      name: home-svc
      port:
        number: 80                            
  rules:
    - http:
        paths:           
          - path: /red
            pathType: Prefix
            backend:
              service:
                name: red-svc
                port: 
                  number: 80
          - path: /green
            pathType: Prefix
            backend:
              service:
                name: green-svc
                port: 
                  number: 80
          - path: /orange
            pathType: Prefix
            backend:
              service:
                name: /orange-svc
                port: 
                  number: 80
